- Added Olemba Seed to the loot table of Dampscale Basilisk for the quests Olemba Seeds and Olemba Seed Oil.
- Added Olemba Seed to the loot table of Dampscale Devourer for the quests Olemba Seeds and Olemba Seed Oil.
- Added Olemba Seed to the loot table of Warp Stalker for the quests Olemba Seeds and Olemba Seed Oil.
- Added Olemba Seed to the loot table of Dreadfang Lurker for the quests Olemba Seeds and Olemba Seed Oil.
- Added Olemba Seed to the loot table of Teromoth for the quests Olemba Seeds and Olemba Seed Oil.
- Added Olemba Seed to the loot table of Royal Teromoth for the quests Olemba Seeds and Olemba Seed Oil.
- Added Olemba Seed to the loot table of Timber Worg for the quests Olemba Seeds and Olemba Seed Oil.
- Added Olemba Seed to the loot table of Timber Worg Alpha for the quests Olemba Seeds and Olemba Seed Oil.
- Added Olemba Seed to the loot table of Ironspine Chomper for the quests Olemba Seeds and Olemba Seed Oil.
- Added Olemba Seed to the loot table of Ironspine Petrifier for the quests Olemba Seeds and Olemba Seed Oil.
- Updated the flags of Olemba Seed to allow every member of a group to loot it.

[2023-06-20]
- Updated the flags of Raptor Ribs to allow every member of a group to loot it.
- Updated the flags of Serpent Flesh to allow every member of a group to loot it.

[2023-07-10]
- Added Bundle of Wood to the loot table of Murloc Forager for the quest A Bundle of Trouble.
- Added Bundle of Wood to the loot table of Murloc Lurker for the quest A Bundle of Trouble.
- Updated the flags of Bundle of Wood to allow every member of a group to loot it.

[2023-08-29]
- Updated the flags of Prospector's Pick to allow every member of a group to loot it.

[2023-09-01]
- Updated the restock time of Berard's Bookshelf to prevent having to wait for it.

[2023-09-24]
- Added the script for Tirisfal Glades to make the quest A Rogue's Deal trigger for every member of a group.