@@ -1,2 +1,11 @@
 -- Berard's Bookshelf (Quest: A Recipe For Death (Id: 450))
 UPDATE `gameobject_template` SET `Data2`=0 WHERE `entry`=1594;
+
+-- Stone of West Binding (Quest: Stones of Binding (Id: 651))
+UPDATE `gameobject_template` SET `Data2`=0 WHERE `entry`=2689;
+
+-- Stone of Outer Binding (Quest: Stones of Binding (Id: 651))
+UPDATE `gameobject_template` SET `Data2`=0 WHERE `entry`=2690;
+
+-- Stone of East Binding (Quest: Stones of Binding (Id: 651))
+UPDATE `gameobject_template` SET `Data2`=0 WHERE `entry`=2691;
