@@ -634,3 +634,8 @@
 
 [2023-09-24]
 - Added the script for Tirisfal Glades to make the quest A Rogue's Deal trigger for every member of a group.
+
+[2023-11-14]
+- Updated the restock time of Stone of West Binding to prevent having to wait for it.
+- Updated the restock time of Stone of Outer Binding to prevent having to wait for it.
+- Updated the restock time of Stone of East Binding to prevent having to wait for it.
